# webart

./: .gitignore  Cargo.toml  docker-compose.prod.yaml  docker-compose.yaml
my-project/: package-lock.json  package.json  preact.config.js  size-plugin.json
my-project/src/: index.js  template.html
server/: .dockerignore  Cargo.toml  Dockerfile  deploy.sh
server/src/: lib.rs  main.rs
server/src/api/: hello.rs
server/src/handlers/: hello_handler.rs
server/src/routes/: hello_route.rs
server/src/services/: hello_service.rs
server/templates/: article-template.html  articles.html  recipe-template.html  recipes.html  server-error.html
www/: .babelrc  App.jsx  bootstrap.js  deploy.sh  index.html  index.js  package-lock.json  package.json  style.css  template.html  webpack.config.js
www/charts/: building.js  circular.js  color-plot.js  fourier.js  relativity.js  shm.js  spiralizer.js  vector.js  wiggler.js
www/components/: Animator.jsx  Buildings.jsx  Button.jsx  Circular.jsx  ColorPlot.jsx  ColorStudy.jsx  FlexRow.jsx  Footer.jsx  Fourier.jsx  Link.jsx  NumberInput.jsx  SimpleHarmonicMotion.jsx  Spiralizer.jsx  Swatch.jsx  Switch.jsx  Test.jsx  Title.jsx  VerticalList.jsx
www/containers/: Aesthetic.jsx  Blog.jsx  Buildings.jsx  Circular.jsx  ColorPlot.jsx  ColorStudy.jsx  Dada.jsx  Escher.jsx  Fourier.jsx  Game.jsx  HOC.jsx  Home.jsx  MusicBox.jsx  Oolisp.jsx  SimpleHarmonicMotion.jsx  SpectralCircle.jsx  Spiral.jsx  Vector.jsx
www/public/: Lofi3v.1.3.m4a  Lofi4v1.3.m4a  article.css  index.html  me.html  neo-soul.m4a  primary-collective.html  style.css
(+142 files in other folders)
