[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dada-poem-generator = "0.1.1"
dotenv = "0.15.0"
env_logger = "0.8.4"
lazy-regex = "2.2.1"
log = "0.4.14"
markdown-to-html = "0.1.2"
serde = "1.0.130"
serde_derive = "1.0.130"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.1", features = ["tls", "compression"] }
